# onsager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  skills-lock.json
crates/forge/: Cargo.toml
crates/forge/src/: lib.rs  main.rs
crates/forge/tests/: persistence_restart.rs  workflow_runtime.rs
crates/ising/: Cargo.toml
crates/ising/src/: lib.rs  main.rs
crates/onsager/: Cargo.toml
crates/onsager-artifact/: Cargo.toml
crates/onsager-artifact/src/: artifact.rs  deliverable.rs  lib.rs  provenance.rs
crates/onsager-cli/: Cargo.toml
crates/onsager-cli/src/: main.rs
crates/onsager-core/: Cargo.toml
crates/onsager-core/src/: executor.rs  lib.rs  node.rs  process.rs  replay.rs  session.rs  task.rs
crates/onsager-delivery/: Cargo.toml
crates/onsager-delivery/src/: delivery.rs  lib.rs
crates/onsager-events/: Cargo.toml
crates/onsager-events/src/: core_event.rs  lib.rs  store.rs
crates/onsager-github/: Cargo.toml
crates/onsager-github/src/: adapter.rs  credential.rs  error.rs  lib.rs  polling.rs
crates/onsager-nodes/: Cargo.toml
crates/onsager-nodes/src/: agent.rs  context.rs  dispatch.rs  error.rs  executor.rs  human.rs  lib.rs  registry.rs  scheduler.rs  script.rs  spine.rs  subworkflow.rs  verify.rs
crates/onsager-nodes/tests/: crawlab_fixture.rs  scheduler_end_to_end.rs  scheduler_event_contract.rs  subworkflow_end_to_end.rs
crates/onsager-observers/: Cargo.toml
crates/onsager-observers/src/: gate_deny_rate.rs  gate_override.rs  lib.rs  observer.rs  output.rs  pattern.rs  pr_churn.rs  runtime.rs  shape_retry.rs  store.rs
crates/onsager-observers/tests/: runtime_e2e.rs  runtime_hydration_e2e.rs
crates/onsager-portal/: CLAUDE.md  Cargo.toml
crates/onsager-portal/migrations/: 001_portal_webhook_secrets.sql  002_users.sql  003_auth_sessions.sql  004_sso_exchange_codes.sql  005_user_pats.sql  006_user_credentials.sql  007_github_app_installations.sql  008_portal_remediation_calls.sql  009_activation_events.sql  010_spec_plans.sql
crates/onsager-portal/src/: anthropic.rs  auth.rs  auth_db.rs  config.rs  core.rs  credential_db.rs  db.rs  dev_auth.rs  gate.rs  github.rs  installation.rs  installation_db.rs  lib.rs  main.rs  migrate.rs  pat_db.rs  preset.rs  proxy_cache.rs  remediation_db.rs  server.rs  session_db.rs  signature.rs  spec_plan_db.rs  sso.rs  state.rs  substrate_library_db.rs  workflow.rs  workflow_activation.rs  workflow_db.rs  workflow_version_db.rs  workspace_db.rs
crates/onsager-portal/tests/: poller_emits_to_spine.rs  reconciliation_state.rs  reference_only_artifacts.rs  showcase_dogfood.rs  workflow_delete.rs
crates/onsager-protocol/: Cargo.toml
crates/onsager-protocol/src/: lib.rs  protocol.rs
crates/onsager-registry/: CLAUDE.md  Cargo.toml
crates/onsager-registry/src/: catalog.rs  evaluators.rs  events.rs  lib.rs  registry.rs  registry_store.rs  seed.rs  triggers.rs
crates/onsager-registry/tests/: registry_flow.rs  seed_idempotency.rs
crates/onsager-scheduler/: Cargo.toml
crates/onsager-scheduler/src/: bridge.rs  lib.rs  main.rs  service.rs  spine_client.rs
crates/onsager-scheduler/tests/: trigger_round_trip.rs
crates/onsager-spine/: CLAUDE.md  Cargo.toml  README.md
crates/onsager-spine/examples/: producer_consumer.rs
crates/onsager-spine/migrations/: 002_artifacts.sql  003_artifacts_git_context.sql  004_artifact_pipeline.sql  005_warehouse_delivery.sql  006_workflows.sql  007_artifact_version_rename.sql  008_artifacts_external_ref_index.sql  009_workflows_created_by.sql  010_workspace_id_unification.sql  011_artifacts_external_ref_only.sql  012_collapse_workspace_workflows.sql  012_rename_install_ref.sql  013_collapse_workspace_workflows.sql  014_events_correlation_id.sql  015_artifacts_workflow_fk_set_null.sql  016_events_ext_workspace_id.sql  017_relax_trigger_kind_check.sql  018_workflow_trigger_state.sql  019_outbox_trigger_cursor.sql  020_workspaces_to_spine.sql  021_drop_warehouse_delivery.sql  022_workflow_versions.sql  023_workflow_changes.sql  024_workflow_edit_policies.sql  025_workflow_version_pin.sql  026_artifact_provenance.sql  027_workflow_library.sql  028_observer_outputs.sql  029_workflow_library_retired.sql  030_artifacts_external_ref_no_provider_fields.sql  031_adapter_reconciliation_state.sql  032_events_ext_external_ref.sql  033_projects_ingestion_mode.sql
crates/onsager-spine/seeds/: base.yaml
crates/onsager-spine/specs/: event-stream-spine-v0.1.md  forge-v0.1.md  onsager-monorepo-migration.md  warehouse-and-delivery-v0.1.md
crates/onsager-spine/src/: artifact.rs  bundle.rs  catalog.rs  delivery.rs  evaluators.rs  extension_event.rs  factory_event.rs  factory_event_tests.rs  lib.rs  listener.rs  namespace.rs  protocol.rs  registry.rs  registry_store.rs  seed.rs  store.rs  trigger.rs  webhook_routing.rs
crates/onsager-spine/tests/: registry_flow.rs  seed_idempotency.rs  warehouse_flow.rs
crates/onsager-substrate/: Cargo.toml
crates/onsager-substrate/src/: compiler.rs  events.rs  executor.rs  ids.rs  lib.rs  library.rs  spec_plan.rs  validate.rs  workflow.rs  workflow_library.rs
crates/onsager-substrate/tests/: spine_payload_compat.rs  workflow_library.rs
crates/onsager-synodic/: Cargo.toml
crates/onsager-synodic/src/: intercept.rs  lib.rs  processor.rs
crates/onsager-trigger/: Cargo.toml
crates/onsager-trigger/src/: main.rs
crates/onsager-warehouse/: Cargo.toml
crates/onsager-warehouse/src/: bundle.rs  lib.rs
crates/onsager-warehouse/tests/: warehouse_flow.rs
crates/onsager/src/: main.rs
crates/refract/: Cargo.toml
crates/stiglab/: CLAUDE.md  Cargo.toml
crates/synodic/: CLAUDE.md  Cargo.toml  Makefile
xtask/: Cargo.toml
xtask/src/: check_deferred_todos.rs  check_events.rs  check_file_budget.rs  check_generated_types.rs  check_hitl_coverage.rs  check_orphan_crates.rs  check_single_impl_traits.rs  check_tools_and_skills.rs  check_triggers.rs  lint_api_contract.rs  lint_seams.rs  main.rs  portal_registry.rs  slot.rs
(+690 files in other folders)
