[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Production line subsystem — drives artifacts through their lifecycle"

[lib]
name = "forge"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-spine = { path = "../onsager-spine" }
onsager-warehouse = { path = "../onsager-warehouse" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
ulid = { version = "1", features = ["serde"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
