[package]
name = "ising"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Continuous improvement engine — observes the factory and surfaces insights"

[lib]
name = "ising"
path = "src/lib.rs"

[[bin]]
name = "ising"
path = "src/main.rs"

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-spine = { path = "../onsager-spine" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
