[package]
name = "ising"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deprecated 0.1 continuous-improvement engine. Detection logic moved to onsager-observers per spec #362 (OBS-02); this crate is a stub awaiting full retirement."

[lib]
name = "ising"
path = "src/lib.rs"

[[bin]]
name = "ising"
path = "src/main.rs"

# Dependencies trimmed in spec #362 — the analyzer engine, FactoryModel,
# and InsightEmitter all moved to onsager-observers, so this stub no
# longer needs serde / sqlx / tracing / spine / artifact / clap.
[dependencies]
