[package]
name = "onsager-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Artifact value objects — Artifact, ArtifactId, BundleId, lineage, quality signals."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { version = "1", features = ["serde"] }
