[package]
name = "onsager-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "onsager"
path = "src/main.rs"

[dependencies]
onsager-events = { path = "../onsager-events" }
onsager-core = { path = "../onsager-core" }
onsager-synodic = { path = "../onsager-synodic" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
