[package]
name = "onsager-github"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed GitHub client + webhook + OAuth for Onsager — the single home for GitHub HTTP"

[lib]
name = "onsager_github"
path = "src/lib.rs"

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-spine = { path = "../onsager-spine" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

reqwest = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
