[package]
name = "onsager-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inter-subsystem protocol types — Forge/Stiglab/Synodic/Ising request/response contracts."

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-spine = { path = "../onsager-spine" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
