[package]
name = "onsager-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Factory pipeline registry — type catalog, adapters, gate evaluators, seed loader."

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-spine = { path = "../onsager-spine" }

sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
