[package]
name = "onsager-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deployed substrate-scheduler host (RUN-03, #386) — bridges trigger.fired → Plan Compiler → Scheduler."

[[bin]]
name = "onsager-scheduler"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
onsager-nodes    = { path = "../onsager-nodes" }
onsager-spine    = { path = "../onsager-spine" }
onsager-substrate = { path = "../onsager-substrate" }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
