[package]
name = "onsager-spine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client library for the Onsager event spine — shared PostgreSQL event stream coordination."

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ulid = { version = "1", features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
