[package]
name = "onsager-spine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client library for the Onsager event spine — shared PostgreSQL event stream coordination."

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }

tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
ulid = { version = "1", features = ["serde"] }
