[package]
name = "onsager-substrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "0.2 substrate kernel — Workflow / Node / Edge data model, Executor trait, and the Workflow Library."

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
typetag = "0.2"
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }
thiserror = { workspace = true }

[dev-dependencies]
onsager-spine = { path = "../onsager-spine" }
tokio = { workspace = true }
