[package]
name = "onsager-synodic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
onsager-events = { path = "../onsager-events" }
onsager-core = { path = "../onsager-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
async-trait = "0.1"
