[package]
name = "onsager-trigger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for firing manual workflow triggers and replaying past TriggerFired events"

[[bin]]
name = "onsager-trigger"
path = "src/main.rs"

[dependencies]
onsager-spine = { path = "../onsager-spine" }
onsager-registry = { path = "../onsager-registry" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
