[package]
name = "onsager-warehouse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundle model and Warehouse trait — sealed artifact storage for the Onsager factory."

[dependencies]
onsager-artifact = { path = "../onsager-artifact" }

tokio = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
hex = { workspace = true }

[dev-dependencies]
onsager-spine = { path = "../onsager-spine" }
tempfile = { workspace = true }
