[package]
name = "onsager"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Onsager — unified dispatcher CLI for the AI factory stack"

[[bin]]
name = "onsager"
path = "src/main.rs"

[dependencies]
# Note: NO business crate deps here. This dispatcher must not link stiglab or
# synodic — that would break runtime loose coupling by forcing a rebuild on
# any subsystem change.
